[gd_scene load_steps=2 format=3 uid="uid://btmc52ktpng6v"]

[ext_resource type="Script" uid="uid://bdxkyru1fbil8" path="res://scripts/base_enemy_spawner.gd" id="1_deq5s"]

[node name="BaseEnemySpawner" type="Node2D"]
script = ExtResource("1_deq5s")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ShutdownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ShutdownTimer" to="." method="_on_shutdown_timer_timeout"]
